--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,12 @@
 # Ignore HTML BOMs in Github's Language Stats
 *.html linguist-detectable=false
 
+# Ignore STM32 HAL/Drivers/usw in Github's language stats:
+Tester_Firmware/Drivers/** linguist-vendored
+Tester_Firmware/Core/** linguist-vendored
+Tester_Firmware/Core/Src/main.c -linguist-vendored
+
+# This is a C project....
+*.h linguist-language=C
+
 
